examples/test/testpolicy19260.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19260
  namespace: namespace216
spec:
  podSelector:
    matchLabels:
      key22: value37
      key35: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value30
      podSelector:
        matchLabels:
          key26: value10
          key9: value1
